--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,24 @@
+/* 구글폰트로 폰트사이즈 조정 */
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap");
 
+/* css 리셋 */
 @import "reset.css";
+
+/* 전체 사항 */
 @import "variables.css";
 
 /* Components */
 @import "components/status-bar.css";
 @import "components/nav-bar.css";
+@import "components/screen-header.css";
+@import "components/user-component.css";
 
 /* Screens */
 @import "screens/login.css";
+@import "screens/friends.css";
 
 body {
   font-family: "Open Sans", sans-serif;
+  height: 200vh;
+  color: #2e363e;
 }
