--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -14,3 +14,13 @@
 .screen-header__icons span {
   margin-left: 25px;
 }
+
+.screen-header__icons {
+  position: relative;
+}
+
+.cog-icon-dot {
+  position: absolute;
+  right: -10px;
+  bottom: 20px;
+}
