--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -2,7 +2,9 @@
   /*
   position: fixed;
   top: 0;
+  background-color: white;
   */
+  z-index: 9;
   width: 100%;
   display: flex;
   justify-content: center;
