--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -25,7 +25,7 @@
 .user-component__subtitle {
   margin-top: 8px;
   font-size: 17px;
-  color: rgba(0, 0, 0, 0.5);
+  color: var(--grey);
 }
 
 .user-component__avatar--xl {
