--- a/css/style.css
+++ b/css/style.css
@@ -14,11 +14,14 @@
 @import "components/user-component.css";
 @import "components/badge.css";
 @import "components/dot.css";
+@import "components/icon-row.css";
+@import "components/alt-screen-header.css";
 
 /* Screens */
 @import "screens/login.css";
 @import "screens/friends.css";
 @import "screens/find.css";
+@import "screens/more.css";
 
 body {
   font-family: "Open Sans", sans-serif;
