--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -1,6 +1,6 @@
 #chat-screen {
   background-color: #abc1d1;
-  height: 10000vh;
+  height: 500vh;
 }
 
 #chat-screen .alt-header,
@@ -26,11 +26,23 @@
   z-index: 1;
 }
 
+@keyframes screenFadeIn {
+  from {
+    transform: translateY(30px);
+    opacity: 0;
+  }
+  to {
+    transform: none;
+    opacity: 1;
+  }
+}
+
 .main-chat {
   margin-top: 150px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  animation: screenFadeIn 0.8s linear;
 }
 
 .chat__timestamp {
@@ -116,14 +128,15 @@
   padding: 5px 25px;
   box-sizing: border-box;
   align-items: center;
+  transition: all 0.3s ease-in-out;
 }
 
 .reply .reply__column:first-child {
-  width: 10%;
+  width: 5%;
 }
 
 .reply .reply__column:last-child {
-  width: 90%;
+  width: 95%;
   position: relative;
 }
 
@@ -139,19 +152,22 @@
   padding: 12px;
   width: 100%;
   border: var(--main-border);
-  border-radius: 20px;
+  border-radius: 25px;
+  box-sizing: border-box;
+  transition: all 0.3s ease-in-out;
 }
 
 .reply__column:last-child > i,
 .reply__column:last-child button {
   position: absolute;
-  right: -3px;
-  top: 2px;
+  right: 3px;
+  top: 5px;
 }
 
 .reply__column:last-child > i {
-  right: 40px;
-  top: 9px;
+  right: 45px;
+  top: 10px;
+  font-size: 27px;
 }
 
 .reply__column button {
@@ -160,9 +176,31 @@
   width: 30px;
   height: 30px;
   border-radius: 50%;
+  font-size: 17px;
 }
 
 .reply__column button:focus,
 .reply__column button:active {
   outline: none;
+}
+
+.reply .reply__column:first-child,
+.reply .fa-smile-wink,
+.reply button {
+  transition: opacity 0.3s ease-in-out;
+}
+
+.reply:focus-within .reply__column:first-child,
+.reply:focus-within .fa-smile-wink,
+.reply:focus-within button {
+  opacity: 0;
+}
+
+.reply input:focus {
+  width: 98vw;
+  transform: translateX(-7.3%) translateY(-80px);
+}
+
+.reply:focus-within {
+  transform: translateY(80px);
 }
