--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@
 @import "components/dot.css";
 @import "components/icon-row.css";
 @import "components/alt-screen-header.css";
+@import "components/no-mobile.css";
 
 /* Screens */
 @import "screens/login.css";
@@ -27,7 +28,7 @@
 
 body {
   font-family: "Open Sans", sans-serif;
-  height: 200vh;
+  height: 100vh;
   color: #2e363e;
 }
 
